As a user I can insert meal name and calories into the meal list [Delivers #183933227]

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Document</title>
 </head>
 <body>
+    <form action=".">
+        <label for="item-name">Meal </label>
+        <input type="text" id="item-name"><br>
+
+        <label for="item-calories">Calories </label>
+        <input type="text" id="item-calories"><br>
+
+        <button class="add-button">Add meal</button>
+    </form>
     <h3>Total calories: <span class="total-calories">0</span></h3>
     <ul></ul>
     <script src="app.js"></script>
