As a user, I can delete a meal after selecting it, from items list [Delivers #183959776]

--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
                     <div class="input-field col s6">
                         <input type="number" placeholder="Add Calories" id="item-calories">
                     </div>
-                    <button class="add-button btn green darken-3"><i class="fa fa-plus"></i> Add meal</button>
-                    <button class="update-button btn orange darken-3"><i class="fa-solid fa-pencil"></i> Update meal</button>
+
+                    <div class="col">
+                        <button class="add-button btn green darken-3"><i class="fa fa-plus"></i> Add meal</button>
+                        <button class="update-button btn orange darken-3"><i class="fa-solid fa-pencil"></i> Update meal</button>
+                    </div>
+                    <div class="col">
+                        <button class="delete-button btn red darken-2"><i class="fa-solid fa-xmark"></i> Delete meal</button>
+                    </div>
                 </div>
             </form>
         </div>
