As a user, I can delete all data or go back from delete/update view to main view [Delivers #183959837]

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="container">
             <a href="#" class="brand-logo center">Calory tracker</a>
         </div>
+        <button style="margin-right: 1em; margin-top: 1em" class="secondary-content clear-button btn green lighten-2">Clear all</button>
     </div>
 </nav>
 
@@ -41,6 +42,9 @@
                     </div>
                     <div class="col">
                         <button class="delete-button btn red darken-2"><i class="fa-solid fa-xmark"></i> Delete meal</button>
+                    </div>
+                    <div class="col">
+                        <button class="back-button btn blue darken-2"><i class="fa-solid fa-circle-arrow-left"></i> Go back</button>
                     </div>
                 </div>
             </form>
